<resources>
    <string name="app_name">HKD Converter</string>
    <string name="hkd_text">HKD($):</string>
    <string name="rmb_text">RMB(元):</string>
    <string name="usd_text">USD($):</string>
    <string name="gbp_text">GBP(£):</string>
    <string name="eur_text">EUR(€):</string>
    <string name="jpy_text">JPY(¥):</string>
    <string name="btn_convert">Convert</string>
    <string name="btn_clear">Clear</string>
    <string name="hint">Enter HK dollars here!</string>
    <string name="menu_about">About Author</string>
    <string name="menu_contact">Contact Author</string>
    <string name="lan_eng">English</string>
    <string name="lan_chi_sim">简体中文</string>
    <string name="lan_chi_tra">繁體中文</string>
    <string name="menu_language">Language</string>
    <string name="author">LIU Yuhao</string>
    <string name="tel">tel:59342135</string>
    <string name="share_text">Share</string>
    <string name="update_exchange_rate">Update</string>
</resources>
